k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: products-ms
  template:
    metadata:
      labels:
        app: products-ms
    spec:
      containers:
        - name: products-service
          image: products-service:v5 # Replace with your actual image
          imagePullPolicy: IfNotPresent # Useful for local development with Minikube/Docker Desktop
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3002
