k8s/shipping-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping-ms
  template:
    metadata:
      labels:
        app: shipping-ms
    spec:
      containers:
        - name: shipping-service
          image: shipping-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3006
