k8s/warehouse-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouse-ms
  template:
    metadata:
      labels:
        app: warehouse-ms
    spec:
      containers:
        - name: warehouse-service
          image: warehouse-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 3008
