k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-ms
spec:
  selector:
    app: auth-ms
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
