k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-ms
  template:
    metadata:
      labels:
        app: notification-ms
    spec:
      containers:
        - name: notification
          image: notification-service:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-ms
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
