k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-ms
spec:
  selector:
    app: orders-ms
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
