k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-ms
spec:
  selector:
    app: payment-ms
  ports:
    - protocol: TCP
      port: 3009        # The port other pods will use to access this service
      targetPort: 3009  # The port the container is listening on
  type: ClusterIP       # Internal access only
