k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-ms
spec:
  selector:
    app: products-ms
  ports:
    - protocol: TCP
      port: 3002        # The port other pods will use to access this service
      targetPort: 3002  # The port the container is listening on
  type: ClusterIP       # Default type, internal access only
