k8s/shipping-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-ms
spec:
  selector:
    app: shipping-ms
  ports:
    - protocol: TCP
      port: 3006        # The port other pods will use to access this service
      targetPort: 3006  # The port the container is listening on
  type: ClusterIP       # Internal access only
