k8s/warehouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-ms
spec:
  selector:
    app: warehouse-ms
  ports:
    - protocol: TCP
      port: 3008        # The port other pods will use to access this service
      targetPort: 3008  # The port the container is listening on
  type: ClusterIP       # Internal access only
